--- a/index.html
+++ b/index.html
@@ -3,22 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="script.js"></script>
     <title>SAV WEB DEV</title>
 </head>
 <body>
     <div class="one">
         <div class="navbar">
-            <div class="logo"><video autoplay loop muted>
-                <source src="content/sav web dev.mp4" type="video/mp4">
-            </video>
-            </div>
+            <a href="index.html">
+                <div class="logo"><video autoplay loop muted>
+                    <source src="content/sav web dev.mp4" type="video/mp4">
+                </video></div>
+            </a>
             <div class="links">
                 <ul>
-                    <li>ABOUT</li>
-                    <li>SKILLS</li>
-                    <li>PROJECTS</li>
-                    <li>CONTACT</li>
+                    <a href="#abt">
+                        <li>ABOUT</li>
+                    </a>
+                    <a href="#skl">
+                        <li>SKILLS</li>
+                    </a>
+                    <a href="#proj">
+                        <li>PROJECTS</li>
+                    </a>
+                    <a href="#con">
+                        <li>CONTACT</li>
+                    </a>
                 </ul>
             </div>    
         </div>
@@ -42,11 +52,11 @@
         </div>
 
         <div class="scroll-2">
-            <a href="#sec2"><span></span></a>
+            <a href="#abt"><span></span></a>
         </div>
     </div>  
     
-    <div class="two" id="sec2">
+    <div class="two" id="abt">
         <div class="about">
             <div class="about-container">
                 <h3>ABOUT ME</h3>
@@ -59,11 +69,11 @@
         </div>
 
         <div class="scroll-3">
-            <a href="#sec3"><span></span></a>
+            <a href="#skl"><span></span></a>
         </div>
     </div>
 
-    <div class="three" id="sec3">
+    <div class="three" id="skl">
         <div class="skills">SKILLS</div>
         <div class="img-container">
             <div class="skill">
@@ -101,14 +111,191 @@
         </div>
 
         <div class="scroll-4">
-            <a href="#sec4"><span></span></a>
+            <a href="#proj"><span></span></a>
         </div>
 
     </div>
 
-    <div class="four" id="sec4">
+    <div class="four" id="proj">
+        <h3>PROJECTS</h3>
+        <div class="project-container">
+            <a href="https://savvychef.savannahcorrero.com/">
+                <div class="project">
+                    <img src="content/savvy-chef.png">
+                    <figcaption>SAVVY CHEF</figcaption>
+                </div>
+            </a>
+            <a href="https://savsarcade.savannahcorrero.com/">
+                <div class="project">
+                    <img src="content/savs-arcade.png">
+                    <figcaption>SAV'S ARCADE</figcaption>
+                </div>
+            </a>
+        </div>
 
+        <div class="scroll-5">
+            <a href="#con"><span></span></a>
+        </div>
     </div>
+
+    <div class="five" id="con">
+        <h3>CONTACT</h3>
+        <div class="msg-container">
+            <h5>LEAVE A NOTE</h5>
+            <div class="form-container" id="dk">
+                <form name="msg-form" action="https://script.google.com/macros/s/AKfycbwr8nwD2TiNM-UTrG2HG4X7xfD7fjfpuGHHVg7pAI24GFYvSlbxw7DkUF7iYI_QE89HIw/exec" method="post">
+                    <div class="row-one" id="dk">
+                        <div class="name-cont" id="dk">
+                            <figcaption id="dk">NAME</figcaption>
+                            <input type="name" placeholder="Your name" class="name" name="name" autocomplete="on">
+                        </div>
+                        <div class="email-cont" id="dk">
+                            <figcaption id="dk">EMAIL</figcaption>
+                            <input type="email" placeholder="Your email address" class="email" name="email" autocomplete="on">
+                        </div>
+                    </div>
+                    <div class="row-two" id="dk">
+                        <figcaption id="dk">MESSAGE</figcaption>
+                        <input type="text" placeholder="Your message" class="msg" name="msg">
+                    </div>
+                    <div class="row-three" id="dk">
+                        <button type="submit" class="go">SEND</button>
+                    </div>
+                </form>
+            </div>
+            <span id="thx"></span>
+        </div>
+        <div class="icons">
+            <div class="icon">
+                <a href="https://github.com/savannahcorrero">
+                    <i class="bi bi-github" style="font-size: 32px"></i>
+                    <figcaption style="font-size: 11px">GITHUB</figcaption>
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://linkedin.com/in/savannahcorrero">
+                    <i class="bi bi-linkedin" style="font-size: 32px"></i>
+                    <figcaption style="font-size: 11px">LINKEDIN</figcaption>
+                </a>
+            </div>
+            <div class="icon">
+                <a href = "mailto: savannahcorrero@gmail.com">
+                    <i class="bi bi-envelope-fill" style="font-size: 32px"></i>
+                    <figcaption style="font-size: 11px">EMAIL</figcaption>
+                </a>
+            </div>
+            <div class="icon">
+                <a href="#resume">
+                    <button onclick="openForm()"><i class="bi bi-file-earmark-code" style="font-size: 32px"></i></button>
+                    <figcaption style="font-size: 11px">REQ RESUME</figcaption>
+                </a>
+            </div>
+        </div>
+
+        <div class="popup" id="popUp">
+            <form name="popup-form" action="https://script.google.com/macros/s/AKfycbyVG_f_Aq2-dcDD_E1pz5PxLQ8VIV-gb2UG0_aZfsxERu0IysIMp98cQSicZO1zs42ycw/exec" method="post">
+                <div class="pop-container">
+                    <div class="pop" id="dk">
+                        <figcaption>NAME</figcaption>
+                        <input type="name" placeholder="Your name" class="pop-name" name="pop-name" autocomplete="on">
+                    </div>
+                    <div class="pop" id="dk">
+                        <figcaption>COMPANY</figcaption>
+                        <input type="text" placeholder="Company name" class="pop-work" name="pop-work" autocomplete="on">
+                    </div>
+                    <div class="pop" id="dk">
+                        <figcaption>EMAIL</figcaption>
+                        <input type="email" placeholder="Your email address" class="pop-email" name="pop-email" autocomplete="on">
+                    </div>
+                    <div class="pop-btns">
+                        <button type="button" class="close" onclick="closeForm()"><i class="bi bi-x-lg" style="font-size: 18px"></i></button>
+                        <button type="submit" class="request">REQUEST</button>
+                    </div>
+                </div>
+                <div class="popspan">
+                    <span id="resume"></span>
+                </div>
+            </form>
+        
+        </div>
+    </div>
+
+    <footer class="foot">Copyright © 2023 SavWebDev</footer>
+
+    <script>
+        // POP-UP FORM OPEN / CLOSE
+        function openForm() {
+            document.getElementById("popUp").style.display = "block";
+        }
+
+        function closeForm() {
+            document.getElementById("popUp").style.display = "none";
+        }
+
+    document.addEventListener('DOMContentLoaded', function() {
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwr8nwD2TiNM-UTrG2HG4X7xfD7fjfpuGHHVg7pAI24GFYvSlbxw7DkUF7iYI_QE89HIw/exec';
+        const form = document.forms['msg-form'];
+        const emailInput = form.querySelector('.email');
+        const thx = document.getElementById("thx");
+
+        // WELCOME MSG + VALID EMAIL MSG 
+        form.addEventListener('submit', e => {
+            e.preventDefault();
+
+            if (!validateEmail(emailInput.value)) {
+                thx.innerHTML = 'Please Enter a Valid Email Address';
+                return;
+            }
+            emailInput.readOnly = true;
+
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => {
+                    thx.innerHTML = "Thanks for Stopping By!";
+                    setTimeout(function() {
+                        thx.innerHTML = ' ';
+                        emailInput.readOnly = false;
+                        form.reset();
+                    }, 4000);
+                })
+                .catch(error => console.error('Error!', error.message));
+        });
+
+
+        // POP-UP FORM
+        const popScriptURL = 'https://script.google.com/macros/s/AKfycbyVG_f_Aq2-dcDD_E1pz5PxLQ8VIV-gb2UG0_aZfsxERu0IysIMp98cQSicZO1zs42ycw/exec';
+        const popForm = document.forms['popup-form'];
+        const popEmail = popForm.querySelector('.pop-email');
+        const resume = document.getElementById("resume");
+
+        // POP UP MESSAGE
+        popForm.addEventListener('submit', e => {
+            e.preventDefault();
+
+            if (!validateEmail(popEmail.value)) {
+                resume.innerHTML = 'Please Enter a Valid Email Address';
+                return;
+            }
+            popEmail.readOnly = true;
+
+            fetch(popScriptURL, { method: 'POST', body: new FormData(popForm) })
+                .then(response => {
+                    resume.innerHTML = "Resume Request Received. Thank You!";
+                    setTimeout(function() {
+                        resume.innerHTML = ' ';
+                        popEmail.readOnly = false;
+                        popForm.reset();
+                    }, 4000);
+                })
+                .catch(error => console.error('Error!', error.message));
+        });
+
+        // CHECK FOR VALID EMAIL
+        function validateEmail(value) {
+            return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(value);
+        }
+
+    });
+    </script>
 
 </body>
 </html>
