Modified project links

--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
     <div class="four" id="proj">
         <h3>PROJECTS</h3>
         <div class="project-container">
-            <a href="https://savvychef.savannahcorrero.com/">
+            <a href="https://savvy-chef.savannahcorrero.com/">
                 <div class="project">
                     <img src="content/savvy-chef.png">
                     <figcaption>SAVVY CHEF</figcaption>
                 </div>
             </a>
-            <a href="https://savsarcade.savannahcorrero.com/">
+            <a href="https://savs-arcade.savannahcorrero.com/">
                 <div class="project">
                     <img src="content/savs-arcade.png">
                     <figcaption>SAV'S ARCADE</figcaption>
